added Prac and HW 5